--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
 
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
-
+        <link href='style.css' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
@@ -49,6 +49,7 @@
                 <button class='clear'>Clear completed</button>
             </footer>
         </main>
-
+      <script src='js/data.js'></script>
+      <script src='js/ui.js'></script>
     </body>
 </html>
