input comes up in the todo list

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
                 <!-- Example of a single TODO item -->
                 <!-- Note that this one is hidden on the page! -->
-                <li class='hide'>
+                <!-- <li class='hide'>
                     <article>
                         <button class='check'></button>
                         <p>[INSERT TODO TEXT HERE]</p>
                         <button class='delete'>X</button>
                     </article>
-                </li>
+                </li> -->
 
             </ul>
 
